--- a/web/src/main/webapp/app/components/managerBoard/managerBoard.html
+++ b/web/src/main/webapp/app/components/managerBoard/managerBoard.html
@@ -39,7 +39,7 @@
             <td>{{playerInfo.player.firstName}}</td>
             <td>{{playerInfo.player.lastName}}</td>
             <td>
-                <button ng-click="openPlayerModal(playerInfo.player,null,null)" type="submit" class="btn btn-primary">Edit</button>
+                <button ng-click="openPlayerModal(playerInfo,displayingTeam,null)" type="submit" class="btn btn-primary">Edit</button>
             </td>
             <td>
                 <button ng-click="removePlayerFromRoster(playerInfo.playerInfoId)" type="submit" class="btn btn-primary">Remove</button>
