--- a/web/src/main/webapp/app/components/playerModal/playerModal.html
+++ b/web/src/main/webapp/app/components/playerModal/playerModal.html
@@ -1,4 +1,3 @@
-
 <div class="modal-header">
     <h3 class="modal-title" id="modal-title">Player</h3>
 </div>
@@ -7,9 +6,9 @@
         <label class="col-sm-3 control-label">First Name</label>
         <div class="col-sm-9">
             <input type="text"
-                   placeholder ="First name"
+                   placeholder="First name"
                    class="form-control"
-                   ng-model="player.firstName"
+                   ng-model="playerinfo.player.firstName"
                    required>
         </div>
     </div>
@@ -17,9 +16,9 @@
         <label class="col-sm-3 control-label">Last Name</label>
         <div class="col-sm-9">
             <input type="text"
-                   placeholder ="Last name"
+                   placeholder="Last name"
                    class="form-control"
-                   ng-model="player.lastName"
+                   ng-model="playerinfo.player.lastName"
                    required>
         </div>
     </div>
@@ -27,21 +26,22 @@
         <label class="col-sm-3 control-label">Date of Birth</label>
         <div class="col-sm-9">
             <input required type="date"
-                   value="{{player.dateOfBirth}}"
-                   max="2004-01-01"
-                   validatedateformat 
+                   value="{{playerinfo.player.dateOfBirth}}"
+                   max="2010-01-01"
+                   validatedateformat
                    data-date-format="yyyy-MM-dd"
+                   maxlength="10"
                    class="form-control"
-                   ng-model="player.dateOfBirth">
+                   ng-model="playerinfo.player.dateOfBirth">
         </div>
     </div>
     <div class="form-group">
         <label class="col-sm-3 control-label">Email</label>
         <div class="col-sm-9">
             <input type="email"
-                   placeholder ="email@email.com"
+                   placeholder="email@email.com"
                    class="form-control"
-                   ng-model="player.email"
+                   ng-model="playerinfo.player.email"
                    required
                    onchange="checkEmail(this.value)">
         </div>
@@ -50,9 +50,9 @@
         <label class="col-sm-3 control-label">Weigth</label>
         <div class="col-sm-9">
             <input type="number"
-                   placeholder ="100"
+                   placeholder="100"
                    class="form-control"
-                   ng-model="player.weight"
+                   ng-model="playerinfo.player.weight"
                    ng-min="20"
                    ng-max="150"
                    required>
@@ -62,9 +62,9 @@
         <label class="col-sm-3 control-label">Height</label>
         <div class="col-sm-9">
             <input type="number"
-                   placeholder ="180"
+                   placeholder="180"
                    class="form-control"
-                   ng-model="player.height"
+                   ng-model="playerinfo.player.height"
                    ng-min="75"
                    ng-max="250"
                    required>
@@ -74,24 +74,35 @@
         <label class="col-sm-3 control-label">Mobile</label>
         <div class="col-sm-9">
             <input type="text"
-                   placeholder ="123456789"
+                   placeholder="123456789"
                    class="form-control"
-                   ng-model="player.mobile">
+                   ng-model="playerinfo.player.mobile">
         </div>
     </div>
-    <br>
+    <div ng-hide="team==null" class="form-group">
+        <label class="col-sm-3 control-label">Jersey number in {{team.category}}</label>
+        <div class="col-sm-9">
+            <input type="number"
+                   class="form-control"
+                   size="2"
+                   min="0"
+                   max="99"
+                   ng-model="playerinfo.jerseyNumber">
+        </div>
+    </div>
+    <br/>
     <h4>Player's teams</h4>
     <div class="form-group">
         <table class="table">
             <tbody>
-                <tr>
-                    <th>Category</th>
-                    <th>Jersey Number</th>
-                </tr>
-                <tr ng-repeat="playerTeam in playerTeams">
-                    <td>{{playerTeam.team.category}}</td>
-                    <td>{{playerTeam.jerseyNumber}}</td>
-                </tr>
+            <tr>
+                <th>Category</th>
+                <th>Jersey Number</th>
+            </tr>
+            <tr ng-repeat="playerTeam in playerTeams">
+                <td>{{playerTeam.team.category}}</td>
+                <td>{{playerTeam.jerseyNumber}}</td>
+            </tr>
             </tbody>
         </table>
     </div>
