--- a/web/src/main/webapp/app/components/playerModal/playerModal.html
+++ b/web/src/main/webapp/app/components/playerModal/playerModal.html
@@ -90,7 +90,7 @@
                    ng-model="playerinfo.jerseyNumber">
         </div>
     </div>
-    <div class="form-group">
+    <div ng-hide="playerTeams==null" class="form-group">
         <h4>Player's teams</h4>
         <table class="table">
             <tbody>
